--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "timestamper",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://aaaantoine.github.io/timestamper",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
@@ -10,6 +11,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.0",
+    "gh-pages": "^3.1.0",
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-confirm-alert": "^2.6.1",
@@ -17,6 +19,8 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
